# LightBaker

./: .gitignore  CMakeLists.txt  NTC_SETUP.md  README.md
scripts/: decode_sphere_material.sh  ntc_roundtrip.sh
src/: baker.cpp  baker.h  bvh.cpp  bvh.h  denoiser.cpp  denoiser.h  geometry.h  lightmap.cpp  lightmap.h  main.cpp  pathtracer.cpp  pathtracer.h  render.cpp  render.h  rng.h  scene.cpp  scene.h  seamstitch.cpp  seamstitch.h  vecmath.h  viewer.cpp
